fix flickering bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -485,6 +485,7 @@ table
 			display: flex ;
 			flex-direction: row ;
 			align-items: center ;
+			overflow: hidden ;
 
 			> span:not([class])
 			{
